<resources>
    <string name="app_name">NasaRoom</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="nasalist">List of Blogs</string>
    <string name="detail">Detail</string>
    <string name="date">Date: </string>
    <string name="url">Url: </string>


</resources>