<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/NasaListFragment"
    >

    <fragment
        android:id="@+id/NasaListFragment"
        android:name="com.fulmen.nasaroom.ui.mainlist.NasaListFragment"
        android:label="@string/nasalist"
        tools:layout="@layout/nasa_list_fragment"
        >
        <action
            android:id="@+id/action_nasaListFragment_to_DetailFragment"
            app:destination="@+id/DetailFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/DetailFragment"
        android:name="com.fulmen.nasaroom.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/detail_fragment"
        />
    <fragment
        android:id="@+id/FavoriteFragment"
        android:name="com.fulmen.nasaroom.ui.favorites.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/nasa_list_fragment"
        >
    <action
        android:id="@+id/action_FavoriteFragment_to_DetailFragment"
        app:destination="@+id/DetailFragment"
        />
    </fragment>

</navigation>